Bug 1358813 - avoid flushing layout when notifying IME of focus events, r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D8007